--- a/assets/css/upgrades.css
+++ b/assets/css/upgrades.css
@@ -65,9 +65,12 @@
 }
 
 .mobile-bottom-nav-item i {
-  font-size: 1.25rem;
+  font-size: 1.1rem;
   margin-bottom: 3px;
   transition: transform 0.2s ease;
+}
+.mobile-bottom-nav-item span {
+  font-size: 0.6rem;
 }
 
 .mobile-bottom-nav-item.active,
